# gitlabctl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs
