[package]
name = "gitlabctl"
version = "0.1.0"
authors = ["Bijan Chokoufe Nejad <bijan.nejad@numberfour.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = { git = "https://gitlab.com/bijan.chokoufe/rust-gitlab.git" }
rayon = "1.1"
clap = "2.33.0"
dirs = "2.0.2"
toml = "0.4.2"

colored = "1.8"
chrono-humanize = "0.0.11"
chrono = { version = "~0.4", features = ["serde"] }
serde = { version = "~1.0", features = ["derive"] }
