[package]
name = "gitlabctl"
version = "0.1.0"
authors = ["Bijan Chokoufe Nejad <bijan.nejad@numberfour.eu>"]
edition = "2018"

[dependencies]
gitlab = { git = "https://gitlab.com/bijan.chokoufe/rust-gitlab.git", branch = "changes-manual" }
tokio = "=0.2.0-alpha.6"
futures-core-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
clap = "2.33.0"
dirs = "2.0.2"
toml = "0.4.2"
itertools = "0.8.0"

colored = "1.8"
chrono-humanize = "0.0.11"
chrono = { version = "~0.4", features = ["serde"] }
serde = { version = "~1.0", features = ["derive"] }
